--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,10 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+<%= render 'form', post: @post %>
+<% @posts.each do |post| %>
+  <div class="post">
+    <p><%= post.body %></p>
+  </div>
+<% end %>
+<%# link_to 'Show', post %></td>
+<%# link_to 'Edit', edit_post_path(post) %></td>
+<%# link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+<%# link_to 'New Post', new_post_path %>
