Create basic timeline scaffold

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,1 +1,16 @@
+.pub-at {
+  font-size: 14px;
+}
 
+textarea {
+    border: none !important;
+    resize: none;
+}
+
+body {
+  background-color: rgb(245, 245, 245);
+}
+
+.dropdown-actions {
+  margin-top: -3.25rem;
+}
