--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       </div>
       <div class="col-3 px-5">
         <img src="https://bulma.io/images/placeholders/32x32.png" class="px-2">
-        <a href="#" class="text-white fw-bold text-decoration-none">John Doe</a>
+        <a href="#" class="text-white fw-bold text-decoration-none"><%= current_user.name %></a>
       </div>
     </nav>
 
