--- a/app/assets/stylesheets/likings.scss
+++ b/app/assets/stylesheets/likings.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the Liking controller here.
+// Place all the styles related to the Likings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
