--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,20 @@
  *= require_tree .
  *= require_self
  */
+
+.pub-at {
+  font-size: 14px;
+}
+
+textarea {
+    border: none !important;
+    resize: none;
+}
+
+body {
+  background-color: rgb(245, 245, 245);
+}
+
+.dropdown-actions {
+  margin-top: -3.25rem;
+}
