--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid col-6 px-5">
     <p id="notice"><%= notice %></p>
     <p id="alert"><%= alert %></p>
-  <%= render 'form', post: @post %>
+  <%= render "form", post: @post %>
   <% @posts.each do |post| %>
     <div class="card mb-4">
       <div class="card-body pb-1">
@@ -31,9 +31,16 @@
         <div class="card-text mb-3">
           <%= post.body %>
         </div>
+        <% if post.likes.any? %>
+          <% if post.likes.one? %>
+            <p class="text-muted mb-2">1 like</p>
+          <% else %>
+            <p class="text-muted mb-2"><%= post.likes.count %> likes</p>
+          <% end %>
+        <% end %>
         <div class="card-footer row bg-transparent text-center py-0">
           <div class="col">
-            <%= render 'likings/liking_form', post: post %>
+            <%= render "likings/liking_form", post: post %>
           </div>
           <div class="col">
             <a href="#" class="text-decoration-none text-secondary fw-bold">Comment</a>
