--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,11 @@
         <div class="col-6">
           <input type="text" class="form-control w-50">
         </div>
-        <div class="col-3 px-5">
+        <div class="col-3 px-5 text-white fw-bold">
           <img src="https://bulma.io/images/placeholders/32x32.png" class="px-2">
           <a href="#" class="text-white fw-bold text-decoration-none"><%= current_user.name %></a>
+          |
+          <a href="#" class="text-white fw-bold"><i class="bi-people-fill"></i></a>
         </div>
       <% end %>
     </nav>
