--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,7 +23,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Show", post, class: "dropdown-item" %></li>
                 <li><%= link_to "Edit", edit_post_path(post), class: "dropdown-item" %></li>
-                <li><%= link_to 'Destroy', post, method: :delete, class: "dropdown-item" %></li>
+                <li><%= link_to "Destroy", post, method: :delete, class: "dropdown-item" %></li>
               </ul>
             </div>
           </div>
