--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,41 +17,7 @@
         <span class="navbar-brand text-white">Nicebook</span>
       </div>
       <% if user_signed_in? %>
-        <div class="col-6">
-          <input type="text" class="form-control w-50">
-        </div>
-        <div class="col-3 px-5 text-white fw-bold">
-          <a href="#" class="text-white fw-bold text-decoration-none">
-            <img src="https://bulma.io/images/placeholders/32x32.png" class="px-2 pb-1">
-            <%= current_user.name %>
-          </a>
-          |
-          <div class="dropdown dropstart d-inline">
-            <a href="#" class="text-white fw-bold dropdown-toggle" data-bs-toggle="dropdown"><i class="bi-people-fill"></i></a>
-            <ul class="dropdown-menu" id="dropdown-requests">
-              <% if current_user.friend_requests.any? %>
-                <% current_user.friend_requests.each do |friend_request| %>
-                  <li class="dropdown-header friend-request">
-                    <a href="#" class="text-secondary text-decoration-none">
-                      <img src="https://bulma.io/images/placeholders/32x32.png" class="pe-2 pb-1">
-                      <%= friend_request.user.name %>
-                    </a>
-                    <%= link_to(accept_request_path(friend_request), class: "text-secondary text-decoration-none") do %>
-                      <i class="bi-check"></i>
-                    <% end %>
-                    <%= link_to(friendship_path(friend_request), method: :delete, class: "text-secondary text-decoration-none") do %>
-                      <i class="bi-x"></i>
-                    <% end %>
-                  </li>
-                <% end %>
-              <% else %>
-                <li class="dropdown-header" id="no-friend-requests">
-                  No friend requests
-                </li>
-              <% end %>
-            </ul>
-          </div>
-        </div>
+        <%= render "review/navbar" %>
       <% end %>
     </nav>
 
