Change like form to controller action

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -40,7 +40,7 @@
         <% end %>
         <div class="card-footer row bg-transparent text-center py-0">
           <div class="col">
-            <%= render "likings/liking_form", post: post %>
+            <%= render "likings/liking", post: post %>
           </div>
           <div class="col">
             <a href="#" class="text-decoration-none text-secondary fw-bold">Comment</a>
