Add 'Like' label

--- a/app/views/likings/_liking.html.erb
+++ b/app/views/likings/_liking.html.erb
@@ -5,6 +5,6 @@
   <% end %>
 <% else %>
   <%= link_to(like_post_path(current_user.id, post.id), class: "btn text-secondary fw-bold") do %>
-    <i class="bi-hand-thumbs-up"></i>
+    <i class="bi-hand-thumbs-up"></i> Like
   <% end %>
 <% end %>
