--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,11 @@
 
     <div class="row gx-0">
       <div class="sidebar col-3 border-end border-secondary">
+        <%= render "review/left_sidebar" %>
       </div>
-      <%= yield %>
+      <div class="container-fluid col-6 px-5">
+        <%= yield %>
+      </div>
       <div class="sidebar col-3 border-start border-secondary">
       </div>
     </div>
