--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,13 +22,13 @@
     </nav>
 
     <div class="row gx-0">
-      <div class="sidebar col-3 border-end border-secondary">
+      <div class="sidebar col-3">
         <%= render "review/left_sidebar" %>
       </div>
       <div class="container-fluid col-6 px-5">
         <%= yield %>
       </div>
-      <div class="sidebar col-3 border-start border-secondary">
+      <div class="sidebar col-3">
       </div>
     </div>
   </body>
