--- a/app/views/review/_left_sidebar.html.erb
+++ b/app/views/review/_left_sidebar.html.erb
@@ -1,21 +1,23 @@
-<div class="card">
-  <div class="card-body">
-    <h5>Friends</h5>
-    <div class="card-text">
-      <% current_user.friends.each do |friend| %>
-        <p><%= friend.name %></p>
-      <% end %>
-    </div>
+<div class="card my-4 ms-5">
+  <div class="card-body ps-5 pt-4">
+    <h5 class="card-title mb-3">Friends</h5>
+    <% current_user.friends.each do |friend| %>
+      <div class="mb-3">
+        <img src="https://bulma.io/images/placeholders/32x32.png" class="pb-1">
+        <%= friend.name %>
+      </div>
+    <% end %>
   </div>
 </div>
 
-<div class="card">
-  <div class="card-body">
-    <h5 class="card-title">People</h5>
-    <div class="card-text">
-      <% User.all.each do |user| %>
-        <p><%= user.name %></p>
-      <% end %>
-    </div>
+<div class="card my-4 ms-5">
+  <div class="card-body ps-5 pt-4">
+    <h5 class="card-title mb-3">People</h5>
+    <% User.all.each do |user| %>
+      <div class="mb-3">
+        <img src="https://bulma.io/images/placeholders/32x32.png" class="pb-1">
+        <%= user.name %>
+      </div>
+    <% end %>
   </div>
 </div>
