--- a/app/views/review/_left_sidebar.html.erb
+++ b/app/views/review/_left_sidebar.html.erb
@@ -13,7 +13,7 @@
 <div class="card my-4 ms-5">
   <div class="card-body ps-5 pt-4">
     <h5 class="card-title mb-3">People</h5>
-    <% User.all.each do |user| %>
+    <% User.where.not(id: current_user.friends.map { |i| i = i.id } + [current_user.id]).each do |user| %>
       <div class="mb-3">
         <img src="https://bulma.io/images/placeholders/32x32.png" class="pb-1">
         <%= user.name %>
