--- a/app/views/review/_left_sidebar.html.erb
+++ b/app/views/review/_left_sidebar.html.erb
@@ -5,6 +5,7 @@
       <div class="mb-3">
         <img src="https://bulma.io/images/placeholders/32x32.png" class="pb-1">
         <%= friend.name %>
+        <%= link_to "unfriend", unfriend_path(current_user, friend) %>
       </div>
     <% end %>
   </div>
