Create sign out link

--- a/app/views/review/_navbar.html.erb
+++ b/app/views/review/_navbar.html.erb
@@ -32,4 +32,8 @@
       <% end %>
     </ul>
   </div>
+  |
+  <%= link_to(destroy_user_session_path, method: :delete, class: "text-white") do %>
+    <i class="bi-door-open-fill"></i>
+  <% end %>
 </div>
