Test sign out system

--- a/app/views/review/_navbar.html.erb
+++ b/app/views/review/_navbar.html.erb
@@ -33,7 +33,7 @@
     </ul>
   </div>
   |
-  <%= link_to(destroy_user_session_path, method: :delete, class: "text-white") do %>
+  <%= link_to(destroy_user_session_path, method: :delete, class: "text-white", id: "sign-out") do %>
     <i class="bi-door-open-fill"></i>
   <% end %>
 </div>
