--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
         <% end %>
       </div>
       <div class="container-fluid col-6 px-5">
+        <p id="notice"><%= notice %></p>
+        <p id="alert"><%= alert %></p>
         <%= yield %>
       </div>
       <div class="sidebar col-3">
