--- a/app/views/likings/_liking.html.erb
+++ b/app/views/likings/_liking.html.erb
@@ -4,7 +4,7 @@
     <i class="bi-hand-thumbs-up-fill"></i> Like
   <% end %>
 <% else %>
-  <%= link_to(like_post_path(current_user.id, post.id), class: "btn text-secondary fw-bold") do %>
+  <%= link_to(like_post_path(post.id), class: "btn text-secondary fw-bold") do %>
     <i class="bi-hand-thumbs-up"></i> Like
   <% end %>
 <% end %>
