--- a/app/views/review/_left_sidebar.html.erb
+++ b/app/views/review/_left_sidebar.html.erb
@@ -10,7 +10,7 @@
           <%= friend.name %>
         </div>
         <div class="col-1 align-self-end me-5 pb-2">
-          <%= link_to(unfriend_path(current_user, friend), class: "text-danger text-decoration-none") do %>
+          <%= link_to(unfriend_path(friend), class: "text-danger text-decoration-none") do %>
             <i class="bi-person-dash-fill"></i>
           <% end %>
         </div>
@@ -31,7 +31,7 @@
           <%= user.name %>
         </div>
         <div class="col-1 align-self-end me-5 pb-2">
-          <%= link_to(send_request_path(current_user, user), class: "text-success text-decoration-none") do %>
+          <%= link_to(send_request_path(user), class: "text-success text-decoration-none") do %>
             <i class="bi-person-plus-fill"></i>
           <% end %>
         </div>
