Add specs for friendship operations

--- a/app/views/review/_navbar.html.erb
+++ b/app/views/review/_navbar.html.erb
@@ -8,7 +8,7 @@
   </a>
   |
   <div class="dropdown dropstart d-inline">
-    <a href="#" class="text-white text-decoration-none fw-bold dropdown-toggle" data-bs-toggle="dropdown"><i class="bi-people-fill"></i></a>
+    <a href="#" class="text-white text-decoration-none fw-bold dropdown-toggle" id="friend-requests" data-bs-toggle="dropdown"><i class="bi-people-fill"></i></a>
     <ul class="dropdown-menu" id="dropdown-requests">
       <% if current_user.friend_requests.any? %>
         <% current_user.friend_requests.each do |friend_request| %>
@@ -17,10 +17,10 @@
               <img src="https://bulma.io/images/placeholders/32x32.png" class="pe-2 pb-1">
               <%= friend_request.user.name %>
             </a>
-            <%= link_to(accept_request_path(friend_request), class: "text-secondary text-decoration-none") do %>
+            <%= link_to(accept_request_path(friend_request), class: "text-secondary text-decoration-none accept-friend-request") do %>
               <i class="bi-check"></i>
             <% end %>
-            <%= link_to(friendship_path(friend_request), method: :delete, class: "text-secondary text-decoration-none") do %>
+            <%= link_to(friendship_path(friend_request), method: :delete, class: "text-secondary text-decoration-none reject-friend-request") do %>
               <i class="bi-x"></i>
             <% end %>
           </li>
