--- a/app/views/review/_left_sidebar.html.erb
+++ b/app/views/review/_left_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="card my-4 ms-5">
+<div class="card my-4 ms-5" id="list-friends">
   <div class="card-body ps-5 pt-4">
     <h5 class="card-title mb-3">Friends</h5>
     <% current_user.friends.each do |friend| %>
@@ -10,7 +10,7 @@
           <%= friend.name %>
         </div>
         <div class="col-1 align-self-end me-5 pb-2">
-          <%= link_to(unfriend_path(friend), class: "text-danger text-decoration-none") do %>
+          <%= link_to(unfriend_path(friend), class: "text-danger text-decoration-none delete-friend") do %>
             <i class="bi-person-dash-fill"></i>
           <% end %>
         </div>
@@ -19,10 +19,10 @@
   </div>
 </div>
 
-<div class="card my-4 ms-5">
+<div class="card my-4 ms-5" id="list-people">
   <div class="card-body ps-5 pt-4">
     <h5 class="card-title mb-3">People</h5>
-    <% User.where.not(id: current_user.friends.map { |i| i = i.id } + [current_user.id]).each do |user| %>
+    <% User.where.not(id: current_user.friends.map(&:id) + [current_user.id]).each do |user| %>
       <div class="row mb-3 align-items-center">
         <div class="col-1 pb-1">
           <img src="https://bulma.io/images/placeholders/32x32.png" class="pb-1">
@@ -31,8 +31,10 @@
           <%= user.name %>
         </div>
         <div class="col-1 align-self-end me-5 pb-2">
-          <%= link_to(send_request_path(user), class: "text-success text-decoration-none") do %>
-            <i class="bi-person-plus-fill"></i>
+          <% unless user.enqueued_friends.exists?(current_user.id) %>
+            <%= link_to(send_request_path(user), class: "text-success text-decoration-none send-friend-request") do %>
+              <i class="bi-person-plus-fill"></i>
+            <% end %>
           <% end %>
         </div>
       </div>
