--- a/app/views/review/_left_sidebar.html.erb
+++ b/app/views/review/_left_sidebar.html.erb
@@ -34,7 +34,7 @@
           <% if user.enqueued_friends.exists?(current_user.id) %>
             <% sent_request = user.friend_requests.find_by_user_id(current_user.id) %>
             <%= link_to(friendship_path(sent_request), method: :delete, class: "text-warning text-decoration-none cancel-friend-request") do %>
-              <i class="person-x-fill"></i>
+              <i class="bi-person-x-fill"></i>
             <% end %>
           <% else %>
             <%= link_to(send_request_path(user), class: "text-success text-decoration-none send-friend-request") do %>
