Allow to create comments

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,27 +1,16 @@
-<%= form_with(model: comment) do |form| %>
-  <% if comment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
-
-      <ul>
-        <% comment.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :author_id %>
-    <%= form.text_field :author_id %>
+<%= form_with(model: Comment.new, class: "row", id: "comment-#{post.id}") do |f| %>
+  <%= f.hidden_field :author_id, value: current_user.id, id: nil %>
+  <%= f.hidden_field :commentable_id, value: post.id, id: nil %>
+  <%= f.hidden_field :commentable_type, value: post.class, id: nil %>
+  <div class="col-1">
+    <img src="https://bulma.io/images/placeholders/48x48.png" class="rounded-circle">
   </div>
-
-  <div class="field">
-    <%= form.label :commentable_id %>
-    <%= form.text_field :commentable_id %>
+  <div class="col">
+    <%= f.text_field :body, class: "form-control rounded-pill comment-input", id: nil %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="col-1 pt-1">
+    <%= link_to("", class: "text-decoration-none", onclick: "document.querySelector('#comment-#{post.id}').submit()") do %>
+      <i class="bi-caret-right-fill"></i>
+    <% end %>
   </div>
 <% end %>
