--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,13 +1,13 @@
-<div class="row comment mb-2">
+<div class="row mb-2">
   <div class="col-1">
     <img src="https://bulma.io/images/placeholders/48x48.png" class="rounded-circle">
   </div>
   <div class="col">
-    <div class="rounded-pill py-2 px-3 me-5 comment-body">
+    <div class="rounded-pill py-2 ps-3 pe-2 me-5 comment-body">
       <a href="#" class="text-primary text-decoration-none"><%= comment.author.name %></a>
       <%= comment.body %>
     </div>
-    <div class="px-3 py-1">
+    <div class="ps-3 pe-2 py-1">
       <a href="#" class="text-decoration-none">Like</a>
       <span class="fw-bold">·</span>
       <a href="#" class="text-decoration-none">Reply</a>
