--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -33,7 +33,7 @@
         <p class="text-muted mb-2"><%= post.likes.count %> likes</p>
       <% end %>
     <% end %>
-    <div class="card-footer row bg-transparent text-center py-0 mb-3">
+    <div class="card-footer row bg-transparent text-center py-2 mb-3">
       <div class="col">
         <%= render "likings/liking", post: post %>
       </div>
@@ -44,8 +44,13 @@
         <a href="#" class="text-decoration-none text-secondary fw-bold">Share</a>
       </div>
     </div>
-    <% post.comments.last(3).each do |comment| %>
-      <%= render "comments/comment", comment: comment %>
-    <% end %>
+    <div class="comments-section pe-1 pb-3">
+      <div class="comment-list pb-3">
+        <% post.comments.last(3).each do |comment| %>
+          <%= render "comments/comment", comment: comment %>
+        <% end %>
+      </div>
+      <%= render "comments/form", post: post %>
+    </div>
   </div>
 </div>
