--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,5 @@
 <h1>Editing Comment</h1>
 
-<%= render 'form', comment: @comment %>
-
-<%= link_to 'Show', @comment %> |
-<%= link_to 'Back', comments_path %>
+<%= form_with model: @comment do |f| %>
+  <%= f.text_field :body %>
+<% end %>
