--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_with(model: Comment.new, class: "row", id: "comment-#{post.id}") do |f| %>
   <%= f.hidden_field :author_id, value: current_user.id, id: nil %>
-  <%= f.hidden_field :commentable, value: post, id: nil %>
+  <%= f.hidden_field :commentable_id, value: post.id, id: nil %>
+  <%= f.hidden_field :commentable_type, value: post.class, id: nil %>
   <div class="col-1">
     <img src="https://bulma.io/images/placeholders/48x48.png" class="rounded-circle">
   </div>
