--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -16,7 +16,9 @@
         <div class="btn-group dropdown-actions ms-3">
           <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false"></button>
           <ul class="dropdown-menu">
-            <li><%= link_to "Show", post, class: "dropdown-item" %></li>
+            <% unless params["action"] == "show" %>
+              <li><%= link_to "Show", post, class: "dropdown-item" %></li>
+            <% end %>
             <li><%= link_to "Edit", edit_post_path(post), class: "dropdown-item" %></li>
             <li><%= link_to "Destroy", post, method: :delete, class: "dropdown-item" %></li>
           </ul>
@@ -46,8 +48,14 @@
     </div>
     <div class="comments-section pe-1 pb-3">
       <div class="comment-list pb-3">
-        <% post.comments.last(3).each do |comment| %>
-          <%= render "comments/comment", comment: comment %>
+        <% if params["action"] == "show" %>
+          <% post.comments.each do |comment| %>
+            <%= render "comments/comment", comment: comment %>
+          <% end %>
+        <% else %>
+          <% post.comments.last(3).each do |comment| %>
+            <%= render "comments/comment", comment: comment %>
+          <% end %>
         <% end %>
       </div>
       <%= render "comments/form", post: post %>
