--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,7 +5,7 @@
   <div class="col ps-4">
     <div class="py-2 px-2 me-5 comment-body row text-break">
       <div class="col">
-        <a href="#" class="text-primary text-decoration-none"><%= comment.author.name %></a>
+        <a href="#" class="text-primary fw-bold text-decoration-none"><%= comment.author.name %></a>
         <%= comment.body %>
       </div>
       <div class="col-1">
