--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -64,7 +64,7 @@
           <% end %>
         <% end %>
       </div>
-      <%= render "comments/form", post: post %>
+      <%= render "comments/form", commentable: post %>
     </div>
   </div>
 </div>
