--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,14 +1,14 @@
-<%= form_with(model: post, class: "px-1 py-2 mb-5 card") do |form| %>
+<%= form_with(model: post, class: "px-1 py-2 mb-5 card") do |f| %>
   <div class="card-body row">
     <div class="col-1">
       <img src="https://bulma.io/images/placeholders/48x48.png" class="rounded-circle">
     </div>
     <div class="col">
-      <%= form.text_area :body, placeholder: "Write something...", class: "form-control" %>
-      <%= form.hidden_field :author_id, value: current_user.id %>
+      <%= f.text_area :body, placeholder: "Write something...", class: "form-control" %>
     </div>
   </div>
   <div class="card-footer bg-transparent">
-    <%= form.submit "Post", class: "btn" %>
+    <%= f.submit "Post", class: "btn" %>
+    <%= link_to "Back", post, class: "btn" %>
   </div>
 <% end %>
