--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,33 +1,26 @@
-<div class="card mb-4">
-  <%= link_to(@comment.commentable, class: "text-primary text-decorartion-none ms-3") do %>
-    <i class="bi-arrow-left-circle-fill go-back"></i>
+<% content_for :content do %>
+  <%= form_with(model: @comment, class: "px-1 py-2 mb-5 row", id: "comment-edit") do |f| %>
+    <div class="col-1">
+      <img src="https://bulma.io/images/placeholders/48x48.png" class="rounded-circle">
+    </div>
+    <div class="col">
+      <%= f.text_field :body, class: "form-control rounded-pill comment-input" %>
+    </div>
+    <div class="col-1 pt-1">
+      <%= link_to("", class: "text-decoration-none", onclick: "document.querySelector('#comment-edit').submit()") do %>
+        <i class="bi-caret-right-fill"></i>
+      <% end %>
+    </div>
   <% end %>
-  <div class="card-body pb-1">
-    <div class="card-text row pt-1 pb-2">
-      <div class="col">
-        <%= form_with(model: @comment, class: "px-1 py-2 mb-5 row", id: "comment-edit") do |f| %>
-          <div class="col-1">
-            <img src="https://bulma.io/images/placeholders/48x48.png" class="rounded-circle">
-          </div>
-          <div class="col">
-            <%= f.text_field :body, class: "form-control rounded-pill comment-input" %>
-          </div>
-          <div class="col-1 pt-1">
-            <%= link_to("", class: "text-decoration-none", onclick: "document.querySelector('#comment-edit').submit()") do %>
-              <i class="bi-caret-right-fill"></i>
-            <% end %>
-          </div>
+<% end %>
+<% content_for :comments do %>
+  <% if @comment.comments.any? %>
+    <div class="comments-section ps-5 pe-1 pb-3">
+      <div class="comment-list ps-3 pb-3">
+        <% @comment.comments.each do |comment| %>
+          <%= render "comments/comment", comment: comment %>
         <% end %>
       </div>
     </div>
-    <% if @comment.comments.any? %>
-      <div class="comments-section ps-5 pe-1 pb-3">
-        <div class="comment-list ps-3 pb-3">
-          <% @comment.comments.each do |comment| %>
-            <%= render "comments/comment", comment: comment %>
-          <% end %>
-        </div>
-      </div>
-    <% end %>
-  </div>
-</div>
+  <% end %>
+<% end %>
