--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,4 +1,5 @@
 <% content_for :content do %>
+  <%= request.referrer %>
   <%= render "comment", comment: @comment %>
 <% end %>
 <% content_for :comments do %>
@@ -8,6 +9,6 @@
         <%= render "comments/comment", comment: comment %>
       <% end %>
     </div>
-    <%= render "comments/form", commentable: @comment %>
+    <%= render "comments/form", model: Comment.new %>
   </div>
 <% end %>
