--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -63,7 +63,7 @@
           <% end %>
         <% end %>
       </div>
-      <%= render "comments/form", commentable: post %>
+      <%= render "comments/form", model: Comment.new %>
     </div>
   </div>
 </div>
