Add go back button in posts#edit

--- a/app/views/comments/_comment_section.html.erb
+++ b/app/views/comments/_comment_section.html.erb
@@ -4,7 +4,7 @@
       <%= render "comment", comment: comment %>
     <% end %>
   </div>
-  <% if form %>
+  <% unless edit %>
     <%= render "form", model: Comment.new %>
   <% end %>
 </div>
