--- a/app/views/layouts/comment_layout.html.erb
+++ b/app/views/layouts/comment_layout.html.erb
@@ -1,8 +1,6 @@
 <% content_for :body do %>
 <div class="card mb-4">
-  <%= link_to(@comment.commentable, class: "text-primary text-decoration-none ms-3") do %>
-    <i class="bi-arrow-left-circle-fill go-back"></i>
-  <% end %>
+  <%= render "resources/go_back", reference: @comment, attribute: ".commentable" %>
   <div class="card-body pb-1">
     <div class="card-text row pt-1 pb-2">
       <div class="col">
