--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<%= render "form", post: @post %>
+<%= render "form", post: @post, edit: false %>
 <% @posts.each do |post| %>
   <%= render "post", post: post %>
 <% end %>
